--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,8 @@
   "rules": {
     "@typescript-eslint/no-unused-vars": "off",
     "no-var": "off",
-    "prefer-const": "off"
-  }
+    "prefer-const": "off",
+    "no-console": "off"
+  },
+  "ignorePatterns": ["**/*.ts", "**/*.tsx"]
 } 
